# orthocontrol

./: .gitignore  check_midi.py  com.kirkconsulting.orthocontrol.plist  mise.toml  orthocontrol.py  pyproject.toml  requirements.txt  run.sh  setup.sh
docs/: design-decisions.md
orthocontrol/: __init__.py  __main__.py
orthocontrol/control/: applescript_strategy.py  base.py  controller.py  spotify_api_strategy.py  system_keys_strategy.py
